# libvpuppr

./: Cargo.toml  README.md  build.py  libvpuppr.gdextension  vpuppr_rust_lib.gdextension
.github/workflows/: build_libvpuppr.yaml
resources/sql/: init.sql
src/: cli.rs  data_mappers.rs  data_parser.rs  db.rs  lib.rs  logger.rs  model.rs  puppet.rs  puppets.rs  receivers.rs
src/data_mappers/: meow_face.rs
src/model/: dao.rs  puppet.rs  tracking_data.rs
src/puppet/: puppet_3d.rs
src/puppets/: glb_puppet.rs  puppet_2d.rs  puppet_3d.rs  vrm_puppet.rs
src/receiver/: meow_face.rs
src/receivers/: lip_sync.rs  meow_face.rs
