[package]
name = "vpuppr-rust-lib"
version = "0.1.0"
edition = "2021"
authors = ["Tim Yuen<timothy.yuen22@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = [
    "clock",
    "std",
    "time",
] }
godot = { git = "https://github.com/godot-rust/gdext", rev = "02823b4e80b126a84a9daaec93fe4d60338a8caa" }
tot = "0.2.0"
