[package]
name = "libvpuppr"
version = "0.1.0"
edition = "2021"
authors = ["Tim Yuen<timothy.yuen22@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "time",
    "serde",
] }
godot = { git = "https://github.com/you-win/gdext", rev = "e6480ef59514dac852e8d1a5aedfbcd6ab3f5083", features = [
    "serde",
] }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tot = "0.2"
