[package]
name = "libvpuppr"
version = "0.1.0"
edition = "2021"
authors = ["Tim Yuen<timothy.yuen22@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
argh = "0.1.12"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "time",
    "serde",
] }
gluesql = { version = "0.14.0", default-features = false, features = [
    "sled-storage",
] }
godot = { git = "https://github.com/virtual-puppet-project/gdext", branch = "vpuppr", features = [
    "serde",
] }
log = "0.4.20"
once_cell = "1.18"
paste = "1.0.14"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tot = "0.2"
youlog = "0.1.2"
